Freedom Sanbox Ant Deploy/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Actual_Costs_Incurred__c</fullName>
        <label>Actual Costs Incurred</label>
        <summarizedField>Campaign_Expenses__c.Bill_Amount__c</summarizedField>
        <summaryForeignKey>Campaign_Expenses__c.Campaign_Names__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Address_Details__c</fullName>
        <label>Address Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Status__c</fullName>
        <label>CA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call back later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Category__c</fullName>
        <label>Campaign Category</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Acquisition Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Acquisition Campaigns</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commited_End_Date__c</fullName>
        <label>Commited End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Critical_Notes__c</fullName>
        <label>Critical Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Landline__c</fullName>
        <label>Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Marketing_Owner__c</fullName>
        <label>Marketing Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Shailesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bishnu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profitability__c</fullName>
        <formula>( Revenue_Generated__c - Actual_Costs_Incurred__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Date__c</fullName>
        <label>Referred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Generated__c</fullName>
        <label>Revenue Generated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Share__c</fullName>
        <formula>( Revenue_Generated__c  *  revenue_Shared__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Shared</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>revenue_Shared__c</fullName>
        <label>% Revenue Shared</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>Occupation__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>Actual_Costs_Incurred__c</columns>
        <columns>Revenue_Generated__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <validationRules>
        <fullName>CA_Campaign_Error</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Ongoing&quot; ), Commited_End_Date__c  &lt;&gt; NULL)</errorConditionFormula>
        <errorMessage>Ongoing Campaigns should not have a Commited Date</errorMessage>
    </validationRules>
</CustomObject>